# document-gen

./: .gitignore  .pre-commit-config.yaml  CodeLens_Implementation_Plan.docx  CodeLens_PRD.docx  pyproject.toml
codelens/app/: main.py
codelens/app/api/: health.py
codelens/app/core/: file_tree.py  reader.py  vbnet_detector.py
codelens/app/models/: job.py
codelens/tests/: test_reader.py  test_vbnet_detector.py
