[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens"
version = "0.1.0"
description = "CodeLens: VB.net Codebase Documentation Generator"
authors = [{name = "Developer", email = "developer@example.com"}]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "anthropic>=0.0.0",
    "openai>=0.0.0",
    "google-generativeai>=0.0.0",
    "ollama>=0.0.0",
    "tree-sitter>=0.22.0",
    "lxml>=4.9.0",
    "mistune>=3.0.0",
    "pygments>=2.18.0",
    "weasyprint>=61.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "chardet>=5.0.0",
    "redis>=4.0.0",
    "celery>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = false